tests/error/default_case_defined.gw
// (contains] default case already defined
switch(maybe) {
	default:
	default:

}
